# DNF

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.ru.md  main.c
core/: CMakeLists.txt
core/include/: defines.h  dnf_assertions.h  dnf_gametypes.h  engine.h  input_system.h  log.h  logger.h  renderer.h
core/src/: engine.c  input_system.c  log.c  logger.c  renderer.c
game/: CMakeLists.txt
game/include/: entrypoint.h  game.h  game_render.h  map_data.h
game/src/: entrypoint.c  game.c  game_render.c
gameplay/: CMakeLists.txt
gameplay/include/: gameplay.h  gameplay_api.h
gameplay/src/: gameplay.c
launcher/: CMakeLists.txt
launcher/src/: main.c
